# SDL-CMake-template

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  main.cpp
cmake/: sdl2.h
